--- a/styles/style.css
+++ b/styles/style.css
@@ -215,6 +215,53 @@ padding: 8px 20px 8px 20px;
 .join-btn{
     font-weight: 600;
 }
+/* footer section */
+.footer-section{
+    max-width: 1140px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 50px 160px 50px 160px;
+    position: relative;
+}
+.footer-content{
+    width: 359px;
+    height: 179px;
+ margin: 32px 0px;
+}
+.footer-content p{
+    margin-top: 20px;
+}
+.footer-title ul{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-left: 110px;
+}
+.footer-title li{
+    list-style: none;
+}
+.footer-title{
+    position: relative;
+}
+.title-2{
+    position: relative;
+    left: 400px;
+    bottom: 110px;
+    line-height: 40px;
+}
+
+title-1{
+    margin-top: 300px;
+}
+
+.footer-icon{
+    width: 220px;
+    height: 36px;
+    position: absolute;
+    left: 700px;
+    bottom: 270px;   
+}
 
 
 
@@ -320,7 +367,6 @@ height: 50px;
     width: 393px;
 height: 275px;
 }
-
 
 
 
