--- a/styles/style.css
+++ b/styles/style.css
@@ -188,6 +188,100 @@ height: 355px;
     box-shadow:  rgba(0, 0, 0, 0.25);
     border: none;
 }
+
+/* deals section */
+.deals-section{
+    /* max-width: 1140px; */
+    margin: 120px 150px;
+
+}
+.deals-main{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 60px;
+}
+.deals-main h3{
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+.deals-image{
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+}
+.deals-1{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+.image-1{
+ background: url(../assets/deal-bloom.png);
+ background-size: cover;
+    background-repeat: no-repeat;
+    width: 365px;
+    height: 180px;
+     padding: 65px 50px;
+     align-items: center;
+     text-align: center;
+     border-radius: 15px;
+
+}
+.image-2{
+    background: url(../assets/deal-ana.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 365px;
+    height: 180px;
+     padding: 65px 50px;
+     align-items: center;
+     text-align: center;
+     border-radius: 15px;
+
+
+}
+.image-3{
+    background: url(../assets/deal-zabo.png);
+    
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 820px;
+    height: 385px;
+     align-items: center;
+     text-align: center;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     border-radius: 15px;
+    
+
+}
+h5{
+    font-size: 20px;
+font-weight: 700;
+color: white;
+}
+h4{
+    font-size: 40px;
+    font-weight: bold;
+    color: white;
+}
+.image-1, .image-2 p{
+    font-size: 16px;
+    font-weight: 600;
+    color: white;
+}
+.image-3 p{
+    font-size: 28px;
+    font-weight: 700;
+    color: white;
+    
+}
+
+
 /* join section */
 .join-section{
  background: url(../assets/news-letter-bg.png);
@@ -199,6 +293,7 @@ display: flex;
 flex-direction: column;
 text-align: center;
 justify-content: center;
+margin-top: 120px;
 }
 .join-title{
     color: rgb(255, 255, 255);
@@ -215,57 +310,35 @@ padding: 8px 20px 8px 20px;
 .join-btn{
     font-weight: 600;
 }
-/* footer section */
-.footer-section{
-    max-width: 1140px;
+
+/* footer-section */
+.footer-container{
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 50px 160px 50px 160px;
-    position: relative;
+    justify-content: space-between;
+    align-items: start;
+    gap: 48;
+padding: 50px 160px 50px 160px;
 }
-.footer-content{
-    width: 359px;
-    height: 179px;
- margin: 32px 0px;
+.footer-main{
+width: 360px;
 }
-.footer-content p{
-    margin-top: 20px;
+.footer-main img{
+    width: 140px;
+    margin-bottom: 15px;
 }
-.footer-title ul{
+.title-1, .title-2, ul  li{
+    list-style: none;
+    gap: 20px;
+
+}
+.title-1, .title-2{
+    margin: 0px 10px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    margin-left: 110px;
 }
-.footer-title li{
-    list-style: none;
+.footer-img img{
+   margin-right: 15px;
 }
-.footer-title{
-    position: relative;
-}
-.title-2{
-    position: relative;
-    left: 400px;
-    bottom: 110px;
-    line-height: 40px;
-}
-
-title-1{
-    margin-top: 300px;
-}
-
-.footer-icon{
-    width: 220px;
-    height: 36px;
-    position: absolute;
-    left: 700px;
-    bottom: 270px;   
-}
-
-
-
-
 
 
 
@@ -315,6 +388,9 @@ font-weight: 400;
     grid-template-columns: repeat(2, 1fr);
     margin: 40px auto;
 }
+.plant-content  h3, .span-2{
+    font-size: 25px;
+}
 .plant-card{
      width: 171px;
 }
@@ -327,6 +403,7 @@ height: 196.5px;
 }
 .plant-content p{
     margin: 0px 30px;
+    font-size: 14px;
 }
 .left-trusted img{
     display: none;
@@ -364,12 +441,43 @@ margin: -80px 15px 140px 20px;
 height: 50px;
 }
 .join-section{
-    width: 393px;
+    width: 100%;
 height: 275px;
 }
-
-
-
+.footer-container{
+    flex-direction: column;
+    padding: 0px;
+    gap: 20px;
+    margin: 50px 20px;
+}
+.deals-section{
+    margin: 0px;
+}
+.deals-main h3, .span-2 {
+    font-size: 25px;
+    font-weight: 700;
+}
+.deals-main p{
+    font-size: 14px;
+    margin: auto 30px;
+}
+.deals-image{
+    flex-direction: column;
+}
+.image-1, .image-2, .image-3{
+    margin: auto 16px;
+    width: 365px;
+    height: 180px;
+}
+.image-3 h4{
+  font-size: 20px;
+}
+.image-3 p{
+font-size: 16px;
+}
+.btn{
+    padding: 18px 30px;
+}
 
 
 }
