--- a/styles/style.css
+++ b/styles/style.css
@@ -219,7 +219,7 @@ height: 355px;
     gap: 25px;
 }
 .image-1{
- background: url(../assets/deal-bloom.png);
+background-image:linear-gradient( rgba(0, 0, 0, 0.5)), url(../assets/deal-bloom.png);
  background-size: cover;
     background-repeat: no-repeat;
     width: 365px;
@@ -231,7 +231,7 @@ height: 355px;
 
 }
 .image-2{
-    background: url(../assets/deal-ana.png);
+    background-image:linear-gradient( rgba(0, 0, 0, 0.5)), url(../assets/deal-ana.png);
     background-size: cover;
     background-repeat: no-repeat;
     width: 365px;
@@ -244,7 +244,7 @@ height: 355px;
 
 }
 .image-3{
-    background: url(../assets/deal-zabo.png);
+     background-image:linear-gradient( rgba(0, 0, 0, 0.5)), url(../assets/deal-zabo.png);
     
     background-size: cover;
     background-repeat: no-repeat;
@@ -256,9 +256,8 @@ height: 355px;
      flex-direction: column;
      justify-content: center;
      border-radius: 15px;
-    
-
 }
+
 h5{
     font-size: 20px;
 font-weight: 700;
@@ -326,7 +325,7 @@ width: 360px;
     width: 140px;
     margin-bottom: 15px;
 }
-.title-1, .title-2, ul  li{
+.title-1, .title-2,  .li-footer{
     list-style: none;
     gap: 20px;
 
